# axum-demo

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  Tiltfile  deployment.yaml  skaffold.yaml
crates/todo-domain/: Cargo.toml
crates/todo-domain/src/: in_memory.rs  lib.rs  traits.rs
crates/todo-http-schemas/: Cargo.toml
helm/: values.yaml
services/todo-restful/: Cargo.toml  Dockerfile  Tiltfile
services/todo-restful/helm/: values.yaml
services/todo-restful/helm/templates/: deployment.yaml
services/todo-restful/src/: in_memory_todo.rs  ioc.rs  lib.rs  main.rs  observability.rs
services/todo-restful/src/api/: mod.rs  model.rs  openapi.rs  route.rs
services/todo-restful/tests/: health.rs  todo.rs
src/: app.rs  endpoint.rs  in_memory_todo.rs  ioc.rs  lib.rs  main.rs  observability.rs  todo_service.rs
src/api/: model.rs
tests/: health.rs
tilt/: local_jaeger.tilt
