[package]
name = "todo-http-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-domain = { version = "0.1.0", path = "../todo-domain" }
utoipa = "1"
fake = { version = "2", features = ["derive"] }
rand = "*"
serde = { version = "1", features = ["derive"] }
