[package]
name = "todo-restful"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
axum = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"]}
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "request-id"]}
degeneric-macros = "0.4"
trait-set = "0.3"
uuid = { version = "1", features = ["v4"] }
typed-builder = "0.10"
tracing-opentelemetry = "0.17"
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*" }
thiserror = "1"
anyhow = "1"
http = "0.2"
utoipa = "1"
utoipa-swagger-ui = "1"

# workspace dependencies
todo-domain = {version = "0.1", path = "../../crates/todo-domain" }
todo-http-schemas = {version = "0.1", path = "../../crates/todo-http-schemas" }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
serde_json = "1"
